--- a/src/Styles/home.css
+++ b/src/Styles/home.css
@@ -1,11 +1,14 @@
 .homePage{
 
 	justify-content: center;
-	border-style: solid;
 	margin: auto;
-	margin-top: 10px;
-	width: 50%
+	padding: 20px;
+	margin-top: 40px;
+	width: 50%;
+	lenth: 100%;
+	background-color: white;	
+	
 }
 .Title{
-	color: green;
+	
 }
